<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="2"
    >

    <RelativeLayout
        android:id="@+id/header_title_container"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        >
        <TextView
            android:id="@+id/header_title"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            tools:text="0"
            />
        <Button
            android:id="@+id/pay_button"
            android:visibility="invisible"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignLeft="@id/header_title"
            android:layout_alignStart="@id/header_title"
            android:background="@drawable/noads"
            android:text=""
            android:textOn=""
            android:textOff=""
            />
        <ToggleButton
            android:id="@+id/mute_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignRight="@id/header_title"
            android:layout_alignEnd="@id/header_title"
            android:background="@drawable/ic_volume_up_black_24dp"
            android:text=""
            android:textOn=""
            android:textOff=""
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/header_subtitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/button_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="3"
        >

        <Button
            android:id="@+id/button_left"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/button_random"
            android:textOn="@string/button_random"
            android:textOff="@string/button_random"
            android:textAllCaps="false"
            android:textSize="14sp"
            />

        <ToggleButton
            android:id="@+id/button_middle"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/button_counterprod"
            android:textOn="@string/button_counterprod"
            android:textOff="@string/button_counterprod"
            android:textAllCaps="false"
            android:textSize="14sp"
            />

        <ToggleButton
            android:id="@+id/button_right"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/button_misophonia"
            android:textOn="@string/button_misophonia"
            android:textOff="@string/button_misophonia"
            android:textAllCaps="false"
            android:textSize="14sp"
            />
    </LinearLayout>
</LinearLayout>
